<resources>
    <string name="app_name">Construction Site Logistics</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_lang_fr">French</string>
    <string name="action_lang_pt">Portuguese</string>
    <string name="action_lang_en">English</string>
    <string name="menu_home">Home</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_about">About</string>
    <string name="menu_contact">Contacts</string>
    <string name="menu_empresa">Entreprise</string>
    <string name="menu_share">Share</string>
    <string name="menu_visit_us">Visit us</string>
    <string name="menu_privacy_policy">Privacy Policy</string>
    <string name="menu_terms_of_use">Terms of Use</string>
    <string name="menu_attendance_title">Worker\'s activity</string>
    <string name="menu_attendance_log_extra">Start the day </string>
    <string name="menu_attendance_log_end_day">Close the day</string>
    <string name="menu_site_title">Construction Site</string>
    <string name="menu_site_journal">Journal</string>
    <string name="menu_site_qtd">Work Production</string>
    <string name="menu_site_bordereau">Work Tasks</string>
    <string name="menu_site_project">Project plans</string>
    <string name="menu_regie_title">Unscheduled Work</string>
    <string name="menu_regie_planned">Planned for today</string>
    <string name="menu_regie_add">Start works</string>
    <string name="menu_regie_end">End works</string>
    <string name="menu_livraison_title">Delivery</string>
    <string name="menu_livraison_planned">Planned for today</string>
    <string name="menu_livraison_add">Add new document</string>
    <string name="menu_livraison_view">View documents logged</string>
    <string name="menu_ocorrences_title">Occurrences</string>
    <string name="menu_ocorrences_add">Add new occurrence</string>
    <string name="menu_ocorrences_view">View occurrences logged</string>
    <string name="menu_messages_title">Message Center</string>
    <string name="menu_messages_engineer">Engineer on site</string>
    <string name="menu_messages_office">Office</string>
    <string name="menu_warehouse_title">Warehouse</string>
    <string name="menu_hardware_title">Hardware</string>
    <string name="menu_consumables_title">DIY materials</string>
    <string name="menu_clothes_title">Clothes and Protection</string>
    <string name="menu_utils_title">Utilities</string>
    <string name="menu_utils_calendar">Calendar</string>
    <string name="menu_utils_weather">Weather</string>
    <string name="menu_utils_gallery">Photo Gallery</string>
    <string name="menu_utils_sync">Synchronize with Office</string>
    <string name="login_not_on_site">You are not at the construction site</string>
    <string name="login_select_section">Select one section at the construction site</string>
    <string name="login_subtitle_foreman">Foreman</string>
    <string name="info_distance">Distance</string>
    <string name="fragment_list_select_one">You need to select a record first</string>
    <string name="toast_lang_select">Language already selected!</string>
    <string name="prompt_worker_code">Worker ID</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome! "</string>
    <string name="invalid_username">Not a valid ID</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_activity_input_id" >Type in your worker ID</string>
    <string name="login_activity_nfc" >Pass Company Card</string>
    <string name="loading">Loading...</string>
    <string name="update_required">You need to update the App</string>
    <string name="update_check">Checkin App version ...</string>
    <string name="update_ok">You have the latest version </string>
    <string name="error_title">Error</string>
    <string name="error_download_photo">Error downloading Photo</string>
    <string name="error_upload_photo">Error uploading Photo</string>
    <string name="error_file_not_found">File not found</string>
    <string name="error_write_file">Error writing file</string>
    <string name="error_no_data">No data received</string>
    <string name="error_ivalid_data">Invalid data received</string>
    <string name="error_ivalid_url">Invalid url</string>
    <string name="error_nfc_disabled">NFC is disabled</string>
    <string name="error_nfc_not_supported">NFC is not supported</string>
    <string name="error_nfc_ask">Enable NFC in settings?</string>
    <string name="error_location_disabled">you need to enable location</string>
    <string name="error_unable_get_location">Não foi possivel obter a localizaçao. Tente passar o cartao novamente.</string>
    <string name="error_update_msg">There\'s a new version of the App. Click continue to install.</string>
    <string name="error_update_available">Update available</string>
    <string name="error_session_expired">Sessão expirou</string>
    <string name="error_no_camera">Erro ao iniciar a Camera fotografica</string>
    <string name="error_not_today_date">Selected date is different from today date. Do you want to continue?</string>
    <string name="error_http_url_invalid">Error parsing destination url</string>
    <string name="error_http_open_connection">Error opening connection</string>
    <string name="error_http_request_type">Error setting conn. request type</string>
    <string name="error_http_preparing_data">Error on preparing data to send</string>
    <string name="error_http_loading_file">Error loading file</string>
    <string name="error_http_response">Response error from server</string>
    <string name="error_http_loading_response">Error loading from server</string>
    <string name="error_no_network">Internet not available. try again later.</string>
    <string name="error_message_box_not_found">Error loading messages</string>
    <string name="alertbox_yes">Yes</string>
    <string name="alertbox_continue">Continue</string>
    <string name="alertbox_cancel">Cancel</string>
    <string name="alertbox_keep_current_date">Keep date</string>
    <string name="alertbox_change_today">Change to today</string>
    <string name="alertbox_title_question">Question</string>
    <string name="alertbox_title_notice">Warning</string>
    <string name="alertbox_title_result">Result</string>
    <string name="alertbox_title_confirm">Confirmation</string>
    <string name="alertbox_photo_del_msg">Are you sure you want to remove the photo from the list?</string>
    <string name="alertbox_photo_del_msg_db">Are you sure you want to delete the photo from the system?</string>
    <string name="alertbox_add_selected_photo_msg">Add gallery selected photos ?</string>
    <string name="alertbox_need_select_item">You need to select a record</string>
    <string name="alertbox_resume_previous_text">Continue with previous editing?</string>
    <string name="alertbox_discard_changes">you will lose all changes</string>
    <string name="alertbox_question_retry">Do you want to try again ?</string>
    <string name="button_send_request">Send request</string>
    <string name="button_send">Send</string>
    <string name="button_close">Close</string>
    <string name="button_continue">Continue</string>
    <string name="commServer_error">Error contacting server!</string>
    <string name="commServer_check_internet">Check your internet connection and try again</string>
    <string name="commServer_connect_title_msg">Loading...</string>
    <string name="commServer_connect_msg">Contacting server</string>
    <string name="commServer_download_ok">Downloaded sucessfully</string>
    <string name="commServer_submit_error">Error on submitting request</string>
    <string name="commServer_submit_ok">Request submitted successfully</string>
    <string name="commServer_retry">no network. Retrying in</string>
    <string name="sendData_added_queue">Added to Queue</string>
    <string name="sendData_missing_queue">Queue record is missing</string>
    <string name="sendData_missing_fields">Queue Fields record is missing</string>
    <string name="sendData_error_encrypt_data">Error Encrypting Data</string>
    <string name="sendData_error_decrypt_data">Error Decrypting Data</string>
    <string name="sendData_error_ivector">data cannot be validated (iv mismatch)</string>
    <string name="nfc_message_write_error">Error Writing Message !</string>
    <string name="nfc_message_read_error">Error reading card</string>
    <string name="nfc_message_read_auth_error">Data on card is corrupted. Contact the office to replace the card.</string>
    <string name="nfc_message_write_success">Successfully written to Tag !</string>
    <string name="nfc_message_write_progress">Writing to Tag..</string>
    <string name="nfc_message_tag_detected">NFC Tag Detected !</string>
    <string name="nfc_message_read_tag">Read from NFC Tag</string>
    <string name="nfc_message_write_tag">Write to NFC Tag</string>
    <string name="nfc_message_tap_tag">Tap the NFC Tag to your device !</string>
    <string name="nfc_hint_message">Message</string>
    <string name="fragment_nfc_pass_card_title">Pass Company Card</string>
    <string name="fragment_nfc_pass_card_again_title">Pass Company Card again</string>
    <string name="nfc_message_try_again">try again...</string>
    <string name="nfc_message_initialize_new_card">Initializing card...</string>
    <string name="nfc_message_card_not_writeable">(no memory on card)</string>
    <string name="nfcNotSupportedErrorTitle">NFC Not Supported</string>
    <string name="nfcNotSupportedError">This device does not support NFC.</string>
    <string name="nfcDisabledErrorTitle">NFC Disabled</string>
    <string name="nfcDisabledError">This device supports NFC, but it is disabled. Enable it in the device\'s settings.</string>
    <string name="nfcReadOnlyErrorTitle">NFC Read Only</string>
    <string name="nfcReadOnlyError">The NFC tag is read only.</string>
    <string name="nfcFormattingErrorTitle">Formatting Error</string>
    <string name="nfcFormattingError">There was an error formatting the NFC tag.</string>
    <string name="nfcTagLostErrorTitle">Tag Lost</string>
    <string name="nfcTagLostError">The tag was lost or pulled away while writing to it.</string>
    <string name="nfcNoNdefErrorTitle">Invalid Tag</string>
    <string name="nfcNoNdefError">The NFC tag does not support NDEF format.</string>
    <string name="nfcBadSpaceErrorTitle">Not Enough Space</string>
    <string name="nfcBadSpaceError">The NFC tag cannot hold the amount of data required.</string>
    <string name="nfcUnknownErrorTitle">Unknown Error :(</string>
    <string name="nfcUnknownError">An unknown error occurred while writing to the NFC tag.</string>
    <string name="nfcEmptyCard">Card has no data</string>
    <string name="fragment_qrcode_title">Construction site QR code</string>
    <string name="fragment_hardware_title">Hardware</string>
    <string name="fragment_hardware_description">Name or designation of the Hardware</string>
    <string name="frgment_hardware_state_title">State of conservation</string>
    <string name="fragment_hardware_checkbox_working">In working condition</string>
    <string name="fragment_photos_title">Photos for the selected entry</string>
    <string name="fragment_occurrences_add_description">Description</string>
    <string name="fragment_livraison_add_ref">Document reference</string>
    <string name="fragment_livraison_add_material">Type of materials</string>
    <string name="fragment_livraison_add_outro">Other</string>
    <string name="fragment_livraison_add_qtd">Quantity</string>
    <string name="fragment_livraison_add_notes">Notes</string>
    <string name="fragment_journal_no_weather">weather info not available</string>
    <string name="fragment_journal_add_note_title">Annotations</string>
</resources>