<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusableInTouchMode="true">

            <ImageView
                android:id="@+id/fragment_journal_add_photo_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_journal_add_galleryGrid"
                app:srcCompat="@drawable/add_photo" />

            <TextView
                android:id="@+id/fragment_harware_designation_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_occurrences_add_description"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/fragment_journal_add_notas"
                app:layout_constraintTop_toBottomOf="@+id/fragment_journal_add_list"
                tools:text="@string/fragment_journal_add_note_title" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fragment_photos_title"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/fragment_journal_add_galleryGrid"
                app:layout_constraintStart_toStartOf="@+id/fragment_journal_add_galleryGrid" />

            <EditText
                android:id="@+id/fragment_journal_add_notas"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/list_border"
                android:ems="10"
                android:gravity="top|left"
                android:imeOptions="actionDone"
                android:inputType="textMultiLine"
                android:lines="8"
                android:maxLines="10"
                android:minLines="4"
                android:scrollbars="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_harware_designation_title" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fragment_journal_add_list"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/list_border"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="0.40"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_journal_add_weather"
                app:layout_constraintWidth_percent="1.0" />

            <LinearLayout
                android:id="@+id/fragment_journal_add_weather"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_percent=".35">


                <ImageView
                    android:id="@+id/fragment_journal_add_weather_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/noweather"
                    app:srcCompat="@drawable/noweather" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/fragment_journal_add_weather_txt"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_marginTop="0dp"
                        android:layout_weight="1"
                        android:text="@string/fragment_journal_no_weather"
                        android:textColor="#000"
                        android:textStyle="bold" />

                </LinearLayout>
            </LinearLayout>

            <ImageView
                android:id="@+id/fragment_journal_add_note_btn"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                app:layout_constraintEnd_toEndOf="@+id/fragment_journal_add_notas"
                app:layout_constraintTop_toBottomOf="@+id/fragment_journal_add_notas"
                app:srcCompat="@drawable/save" />

            <ImageView
                android:id="@+id/fragment_journal_add_calendar"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/calendar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/calendar" />

            <GridView
                android:id="@+id/fragment_journal_add_galleryGrid"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/list_border"
                android:clickable="true"
                android:columnWidth="172dp"
                android:gravity="center"
                android:horizontalSpacing="5dp"
                android:numColumns="auto_fit"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:stretchMode="columnWidth"
                android:verticalSpacing="5dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHeight_percent="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fragment_journal_add_note_btn"
                app:layout_constraintWidth_percent="1.0"></GridView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</FrameLayout>